--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,11 +97,123 @@ nav a{
     margin-bottom:30px ;
 }
 /*main section styles*/
-/*aboy section styles*/
+.main{
+    max-width: 1140;
+    
+    margin: 0 auto;
+}
+/*about section styles*/
 .about{
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 230px;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+   
+}  
+.info-title{
+    color: #757575;
+    font-size: 20px;
+}
+.info-description{
+    color: #474747;
+}  
+/* skills related styles */
+#what-i-do-description{
+    padding: 30px 150px;
     
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 33px;
+    
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+}
+.skill-container{
+    margin: 0 230px;
+    margin-bottom: 130px;
+}
+/* resume section styles */
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+    margin: 0 230px;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 30px;
+
+}
+.resume-item-institute{
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 30px;
+
+
+}
+.resume-item-description{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 30px;
+
+}
+.resume-container hr{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.download-cv{
+    text-align: center;
+    margin: 70px;
+}
+/* footer related styles */
+footer{
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 230px;
+}
+.footer-column{
+    width: 50%;
+}    
+.social-links a{
+    margin-right: 25px;
+
+}   
+
+#section-title{
+    text-align: left;
+} 
+
+.contact input[type="text"], .contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
+}
